kubernetes/apps/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 0
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        # https://hub.docker.com/r/linuxserver/qbittorrent/tags
        - name: qbittorrent
          image: hotio/qbittorrent:release-5.0.4
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 8080
              name: web-ui
              protocol: TCP
            - containerPort: 6881
              name: torrent-tcp
              protocol: TCP
            - containerPort: 6881
              name: torrent-udp
              protocol: UDP
          volumeMounts:
            - mountPath: "/config"
              name: qbittorrent-config
            - mountPath: /downloads
              name: data
        - name: gluetun
          # https://hub.docker.com/r/qmcgaw/gluetun/tags
          image: ghcr.io/qdm12/gluetun:v3.40
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 9999
              name: gluetun-health
              protocol: TCP
          volumeMounts:
            - name: tunnel
              mountPath: /dev/net/tun
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: data
          persistentVolumeClaim:
            claimName: downloads-ceph
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: tunnel
          hostPath:
            path: /dev/net/tun
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
    - name: torrent-tcp
      port: 6881
      protocol: TCP
    - name: torrent-udp
      port: 6881
      protocol: UDP
