kubernetes/apps/media/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app: qbittorrent
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - qbittorrent.wakkalabs.com
      secretName: qbittorrent-tls
  rules:
    - host: qbittorrent.wakkalabs.com
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
            path: /
            pathType: Prefix
